# lab2

./: lab2  test  test.cpp
allocator_heap_blocks/: CMakeLists.txt
allocator_heap_blocks/src/: Allocator.cpp  main_allocator.cpp
allocator_static_pool/: CMakeLists.txt
allocator_static_pool/src/: main_allocator.cpp
julia/: julia  julia.cpp  julia0  run_julia.sh
julia_allocator/: CMakeLists.txt  julia_allocator.cpp
main_allocator_v2/: CMakeLists.txt
main_allocator_v2/src/: main_allocator.cpp
simple_mallocs/: CMakeLists.txt
simple_mallocs/src/: main  main.cpp  main_allocator_wrapper.sh  main_wrapper.sh  mem_test  mem_test.cpp  mem_test_wrapper.sh
src/: valgrind-out.txt
